--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -1,100 +1,127 @@
-
-
 body {
-    background-color: black;
+  margin-top: 10px;
 }
 
-.search-gear-box-margin {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 16px;
-    margin-right: 12px;
+.btn-primary.wd-override-tweet-btn {
+  border-radius: 50px;
+  margin-top: 10px;
+  width: 100%;
+  min-width: 75%;
+  table-layout: fixed;
 }
-.search-field {
-    color: white;
-    background-color: darkgray;
-    padding-left: 30px;
-    border-radius: 30px;
-    width: 90%;
-    border-width: 0;
-    float: left;
 
+.wd-left-bar {
+  white-space: nowrap;
 }
-.search-gear-box-margin .wd-gear {
-    content: "\2699";
-    font-size: 28px;
-    color: rgb(29, 161, 242);
-    text-decoration: none;
-    float:right;
+
+.wd-verify-search {
+  width: 75%;
+  max-width: 90%;
+  padding: 8px 40px;
+  margin-bottom: 10px;
+  border-radius: 40px;
+  border-style: none;
+  background-color: white;
 }
-.gearbox-span {
-    content: "\2699";
+
+.wd-search-icon-format {
+  position: relative;
+  left: 35px;
+  margin-left: -20px;
 }
-.search-gear-box-margin label {
-    display: none;
+
+.wd-gear-icon-format {
+  float: right;
+  padding: 15px;
+  margin-right: -15px;
 }
-.navigation-tabs {
-    width: 100%;
-    font-size: 15px;
-    padding: 0;
-    margin: 0;
+
+.wd-image-caption {
+  position: absolute;
+  color: darkslategrey;
+  bottom: 0;
+  left: 1%;
 }
-.navigation-tabs li {
-    display: inline-block;
-    padding: 16px;
-    list-style-type: none;
+
+.wd-posts-images {
+  display: inline;
+  float: right;
+  vertical-align: middle;
+  width: 90px;
+  height: 90px;
+  border-radius: 10px;
+  padding: 0;
 }
-.navigation-tabs a {
-    color: rgb(110, 118, 125);
-    text-decoration: none;
+
+.btn-primary.wd-format-follow {
+  float: right;
+  border-radius: 50px;
+  margin-top: 5px;
 }
-.selected-icon {
-    padding-bottom: 12px;
-    border-bottom: solid rgb(29, 161, 242) 4px;
-    color: rgb(29, 161, 242);
+
+.wd-follow-logo {
+  display: inline;
+  float: left;
+  vertical-align: middle;
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  margin-right: 20px;
 }
-.wd-post-topic {
-    color: rgb(110, 118, 125);
-    font-size: 13px;
-    padding-bottom: 6px;
+
+.list-group {
+  margin-top: 10px;
 }
-.post-topic-color{
-    color: lightgray;
-    font-size: 13px;
-    padding-bottom: 6px;
+
+.wd-override-more {
+  font-size: 8px;
+  margin-left: 0;
 }
-.post-title {
-    font-size: 18px;
-    padding-bottom: 6px;
+
+.wd-override-more i {
+  margin-left: -2px;
 }
-.post-number-tuits {
-    font-size: 13px;
-    color: rgb(110, 118, 125);
-    padding-bottom: 12px;
+
+.wd-color-dots {
+  color: black;
 }
-.post-author-name-wd {
-    font-size: 13px;
-    color: white;
-    padding-bottom: 6px;
+
+.wd-handle {
+  margin-bottom: 0;
 }
-.post-image-width {
-    width: 100px;
-    height: 100px;
-    border-radius: 10%;
+
+.wd-topic {
+  margin-bottom: 0;
 }
-.post-image-width img {
-    width: 100%;
-    height: auto;
+
+.wd-tweets {
+  margin-bottom: 0;
 }
-.post-float-left {
-    float: left;
-    width: 70%;
+
+.wd-account {
+  margin-bottom: 0;
 }
-.post-float-right{
-    float: right;
-    margin-right: 16px;
-    padding-bottom: 12px;
+
+.wd-content {
+  margin-bottom: 0;
 }
-.wd-last-post{
-    border-bottom-style: solid;
+
+.wd-navigation-bar {
+  margin-bottom: 10px;
+}
+
+.wd-spacex-override {
+  border-radius: 0;
+}
+
+.wd-tweets {
+  font-size: 15px;
+}
+
+.wd-verify-check {
+  font-size: 5px;
+}
+
+.wd-check-mark {
+  color: black;
 }
