--- a/src/labs/a6/classes/index.css
+++ b/src/labs/a6/classes/index.css
@@ -10,14 +10,11 @@
     background-color: lightcoral;
 }
 
-.wd-bg-green {
-    background-color: lightgreen;
-}
-
 .wd-fg-black {
     color: black;
 }
 
 .wd-padding-10px {
-    padding: 10px;
+    padding: 10px
 }
+
